Archive2/a7/34f49f26eafd7f/output
main.cpp: In function ‘int main()’:
main.cpp:46:24: error: expected type-specifier before ‘;’ token
     int * ptr = new(pt);
                        ^
